# learnhaskell

./: .baby.hs.un~  .gitignore  .haskell.notes.un~  FAMinPics.hs  LYAH-notes.hs  LYAH-notes.markdown  README.md  RWH-01-GettingStarted.hs  RWH-02-TypesAndFunctions.hs  RWH-03-DefiningTypes.hs  add.hs  baby.hs  ch01_WC.hs  haskell.notes  local.vimrc
BegininningHaskell/: .gitignore  1_Going_Functional.hs  2_Declaring_the_Data_Model.hs  3_Reusing_code_through_lists.hs  3_Reusing_code_through_lists.hss  4_Using_Containers_and_Type_Classes.hss  BegininningHaskell.cabal  local.vimrc  makefile
BegininningHaskell/Chapter2/: DataTypes.hs
BegininningHaskell/Chapter3/: Lists.hs  MoreModules.hs  Ranges.hs
BegininningHaskell/Chapter4/: Chapter4.cabal
BegininningHaskell/chapter2/: chapter2.cabal
HaskellDataAnalysisCookbook/: .gitignore  makefile
HaskellFastAndHard/: HaskellFastAndHard.hs  ex1.hs  ex10.hs  ex2.hs  ex3.hs  ex4.hs  ex5.hs  ex6.hs  ex7.hs  ex8.hs  ex9.hs  makefile
OrigamiProgramming/: Main.hs  OrigamiProgramming.cabal  makefile
ParallelAndConcurrentProgramming/: ch1.hs
RealWorldHaskell/: .gitignore
RealWorldHaskell/05-WritingALibrary/: Main  Main.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hs  Trouble.hs
WhyFunctionalProgrammingMatters/: 1_sum.hs  makefile  notes.md
cis194/: 01-intro.hs  02-ADT.hs  ex1.hs  makefile
jekor/: .gitignore  README.markdown  build.sh  local.vimrc  redo-ifchange  redo.hs  repl.hss
scotty/: .gitignore  Main.hs  todo.cabal
wiki.haskell.org/: foldr_foldl.hs  local.vimrc  makefile  typed_holes.hs
(+13 files in other folders)
